<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dmn_5dp">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_first_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_last_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email_id"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_contact_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_contact_no"
        android:inputType="phone"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:text="@string/action_sign_up_short"
        android:layout_height="wrap_content" />


</LinearLayout>
